--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,12 +6,12 @@
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
     <p>{{ site.description }}</p>
-    <img src="assets/DSC_1251-2.jpg" />
+    <img src="assets/blog-images/DSC_1251-2.jpg" />
     <p class="about-jack">
       Tokyo Trains is created by <a href="jack-alexander.co">Jack Alexander</a>.
     </p>
     <p>
-      Jack is a front end developer from Adelaide, Australia. 
+      Jack is a front end developer from Adelaide, Australia.
     </p>
     <p>
     Listen to the <a href="https://open.spotify.com/user/originalblujay/playlist/7fxdXZVAv32mot9JayJxsd">'Tokyo Trains' playlist on Spotify.</a>
