--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
       Tokyo Trains is created by <a href="jack-alexander.co">Jack Alexander</a>.
     </p>
     <p>
-      Jack is a front end developer from Adelaide, Australia.
+      Jack is a front end designer, music producer, and Star Wars fan from Adelaide, Australia. See more of his work <a href="my-work">here</a>.
     </p>
     <p>
     Listen to the <a href="https://open.spotify.com/user/originalblujay/playlist/7fxdXZVAv32mot9JayJxsd">'Tokyo Trains' playlist on Spotify.</a>
