--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,15 @@
       <div class="masthead">
         <div class="container">
           <h3 class="masthead-title">
-            <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-            <small>{{ site.tagline }}</small>
+            <a href="{{ site.baseurl }}/" title="Home">
+              <img src="assets/blog-images/tokyo-trains-logo-text.png" class="site-logo"/>
+            </a>
+            <div class="colored-stripe"></div>
+
+            <!-- <small>{{ site.tagline }}</small> -->
           </h3>
         </div>
+
       </div>
 
       <div class="container content">
