--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -561,3 +561,15 @@ a.pagination-item:hover {
 .layout-reverse.sidebar-overlay #sidebar-checkbox:checked ~ .sidebar {
   box-shadow: -.25rem 0 .5rem rgba(0,0,0,.1);
 }
+
+/*----
+Jack's Additions
+----*/
+.colored-stripe {
+  width: 100%;
+  height: 9px;
+  background-image: url("/assets/blog-images/colored-stripe.png");
+  background-repeat: repeat-x;
+  background-position: center;
+background-size: contain;
+}
