--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -67,7 +67,7 @@ body {
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #268bd2;
+  color: #1ca8fc;
   text-decoration: none;
 }
 a strong {
@@ -382,7 +382,7 @@ tbody tr:nth-child(odd) th {
   color: #999;
 }
 .related-posts li a:hover {
-  color: #268bd2;
+  color: #1ca8fc;
   text-decoration: none;
 }
 .related-posts li a:hover small {
@@ -474,5 +474,11 @@ Jack's Additions
 }
 .about-jack a{
   color: #1ca8fc !important;
+}
+.site-logo {
+  max-width: 350px;
+}
 
+.masthead {
+  border-bottom-style: none !important;
 }
