--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -572,7 +572,7 @@ Jack's Additions
 .colored-stripe {
   width: 100%;
   height: 9px;
-  background-image: url("/assets/blog-images/colored-stripe.png");
+  background-image: url("http://jack-alexander.github.io/tokyotrains/assets/blog-images/colored-stripe.png");
   background-repeat: repeat-x;
   background-position: center;
   background-size: contain;
