--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,10 @@
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
          content to avoid any CSS collisions with our real content. -->
     <div class="bg-color"></div>
-    <div class="bg-orange"></div>
-    <div class="bg-green"></div>
-    <div class="bg-yellow"></div>
-    <div class="bg-blue"></div>
+    <div class="bg-orange animated fadeIn"></div>
+    <div class="bg-green animated fadeIn"></div>
+    <div class="bg-yellow animated fadeIn"></div>
+    <div class="bg-blue animated fadeIn"></div>
 
 
 
@@ -24,9 +24,9 @@
                 <div class="container">
                     <h3 class="masthead-title">
               <a href="{{ site.baseurl }}/" title="Home">
-                <img src="assets/blog-images/tokyo-trains-logo-text.png" class="site-logo"/>
+                <img src="assets/blog-images/tokyo-trains-logo-text.png" class="site-logo animated fadeInDownBig"/>
               </a>
-              <div class="colored-stripe"></div>
+              <div class="colored-stripe animated fadeInDownBig"></div>
 
               <!-- <small>{{ site.tagline }}</small> -->
             </h3>
